@@ -1,3 +1,8 @@
+2003-04-23  Carlos Garnacho Parro  <garnacho@tuxerver.net>
+
+	* network.pl.in: fixed modem autodetection, now it works before and
+	after a ppp session
+
 2003-03-23  Carlos Garnacho Parro  <garnacho@tuxerver.net>
 
 	* network-conf.in, network.pl.in: added modem autodetection directive
